Fix: Mobile spacing and padding

--- a/styles/spacing.css
+++ b/styles/spacing.css
@@ -568,4 +568,12 @@ ul.dropdown-options {
         gap: 32px;
     }
 
+    article {
+        padding: 0px 24px 80px !important;
+    }
+
+    h1 {
+        margin-top: 24px !important;
+    }
+
 }
